<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">流量红包</string>
    <string name="and">与</string>
    <string name="nosdcard">没有找到Sdcard，应用升级功能将无法使用!</string>
    <string name="app_version_select">发现新版本</string>
    <string name="app_version_update">升级版本</string>
    <string name="app_version_prompt">提示</string>
    <string name="app_version_newest">您所使用的已是最新版本。\n当前版本:</string>
    <string name="app_version_confirm">确定</string>
    <string name="app_version_iknow">知道了</string>
    <string name="acount_propmt_input">请输入游戏内使用的</string>
    <string name="acount_propmt_change">重新安装APP或者变更游戏机种需要使用</string>
    <string name="buying">存在未处理完成的订单，系统正在处理，暂时无法继续购买，请稍后再试！</string>
    <string name="check_network">请先检查通信状况</string>
    <string name="click_retry">点击重试按钮</string>
    <string name="check_con_fail">无法链接到服务器，错误代码：</string>
    <string name="check_fail">无效购买！</string>
    <string name="check_error">购买验证错误，请刷新重试！</string>
    <string name="check_exception">出现异常，请刷新界面重试！</string>
    <string name="check_done">购买成功</string>
    <string name="delete_done">删除成功</string>
    <string name="download_fail">下载失败</string>
    <string name="error_network">网络错误</string>
    <string name="error_ser">服务器不可用</string>
    <string name="error_not_foundser">找不到服务器</string>
    <string name="error_requst">请求错误</string>
    <string name="exit">退出</string>
    <string name="exit_propmt">确定退出游戏？</string>
    <string name="first_into">欢迎加入海贼幻想世界，感谢您对海贼幻想的支持，祝你游戏愉快！  </string>
    <string name="kown">知道了</string>
    <string name="later">以后再说</string>
    <string name="login_propmt_input">请输入已注册的昵称和密码</string>
    <string name="login_error">链接服务器出错，请重试！</string>
    <string name="login_fail">登录出错，请重试！</string>
    <string name="link_fail">加载失败</string>
    <string name="music_set">声音设定</string>
    <string name="no_propmt">不再提示</string>
    <string name="open_music">开启音乐</string>
    <string name="open_effect">开启音效</string>
    <string name="open_sound">海贼幻想配有一流团队打造的游戏背景音乐并且每张卡片都有著名声优的配音对话，为了能够更好的感受游戏的乐趣，开始游戏时请记得打开设备声音哦！只需要通过声音控制按钮就开启声音了！</string>
    <string name="password">密码</string>
    <string name="password_pro">（半角英文6~16个字符）</string>
    <string name="propmt_see">密码无法查看·再次发送</string>
    <string name="propmt_save">,请妥善保管</string>
    <string name="retry">重试</string>
    <string name="ser_assert">服务器正在维护,暂时无法进入游戏！</string>
    <string name="share_mail">邀你一起玩海贼幻想</string>
    <!-- <string name="share_title">修改该预览文本不会改变发送的内容 !\n您可以立即分享以下内容:\n</string> -->
    <string name="share_title"></string>
    <string name="share_reward_head">我正在玩#海贼幻想#，听喜多村英梨、佐佐木望、小林悠等日本名声优配音的海贼美女的声音，寻找海贼王秘宝。快下载游戏和我一起去海贼世界冒险吧！我的邀请码：</string>
    <string name="share_up_head">在#海贼幻想#里我又升级了!朝自由海贼梦又进一步!亲,还等什么? 快来海贼幻想，听喜多村英梨、佐佐木望、小林悠等日本名声优配音的海贼美女的声音，寻找海贼王秘宝，和海贼妹子们一起冒险吧！邀请码：</string>
    <string name="share_winbattle_head">耶!在#海贼幻想#PK中我和我的萌妹子们又获胜了! 快来加入海贼幻想吧！听喜多村英梨、佐佐木望、小林悠等日本名声优配音的海贼美女的声音，寻找海贼王秘宝，和海贼妹子们一起冒险吧！邀请码：</string>
    <string name="share_winboss_head">哦也~在我的萌妹子海贼团努力下，又一个BOSS被打败了!加入有美女作伴的#海贼幻想#吧！听喜多村英梨、佐佐木望、小林悠等日本名声优配音的海贼美女的声音，寻找海贼王秘宝，和海贼妹子们一起冒险吧！邀请码：</string>
    <string name="share_getcard_head">又一个海贼美女</string>
    <string name="share_getcard_middle">成为我的同伴!想和海贼美女进行壮丽冒险吗? 快加入#海贼幻想#，听日本名声优配音的海贼美女的声音，寻找海贼王秘宝，和海贼妹子们一起冒险吧！邀请码：</string>
    <string name="share_end">，填写后能获得超稀有海贼战士哦！下载地址：</string>
    <string name="share_propmt">\n★★分享后可获得奖励哟★★</string>
    <string name="share_reward_pt_01">\n分享成功将会获得</string>
    <string name="share_reward_pt_02">友情点数哟!</string>
    <string name="share_reward_card">\n分享成功将会获得卡片哟!</string>
    <string name="share_reward_item">\n分享成功将会获得道具哟!</string>
    <string name="share_load_fail">加载分享资源出错，请重试！</string>
    <string name="username">昵称</string>
    <string name="username_pro">（全角3~10个字符）</string>
    

    <!-- JBLBrowser -->
    <string name="title_activity_main_page_activity">MainPageActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="input_and_search">输入网址或搜索</string>
    <string name="title_activity_text_login">TextLoginActivity</string>
    <string name="title_activity_text_register">TextRegisterActivity</string>
    <string name="title_activity_tool_bar_operate">ToolBarOperateActivity</string>
    <string name="title_activity_input_view_frag">InputViewFragActivity</string>
    <string name="title_activity_recommend_main">RecommendMainActivity</string>
    <string name="recommend">推荐</string>
    <string name="collect">收藏</string>
    <string name="custom">自定义</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="longtime">更早</string>
    <string name="add_bookmark_succeed">添加书签成功</string>
    <string name="add_bookmark_fail">书签已存在，添加书签失败</string>
    <string name="delete_succeed">删除成功</string>
    <string name="delete_failed">删除失败</string>
    <string name="delete_bookmark_fail">删除书签失败</string>
    <string name="delete_bookmark">删除书签</string>
    <string name="no_bookmark">暂无收藏</string>
    <string name="no_history">暂无历史</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="main_share_chooser_title">分享</string>
    <string name="about">关于</string>
    <string name="broswer">JBL Broswer</string>
    <string name="version">Version:1.0.0(01)</string>
    <string name="intruduce">使用JBL Broswer让你更好的使用互联网</string>
    <string name="auto_brightness_setting">自动调节亮度</string>
    <string name="history_favourate_title">收藏/历史</string>
    <string name="download_manage_title">下载管理</string>
    <string name="recommend_web_title">推荐网页</string>
    <string name="browser_setting_title">设置</string>
    <string name="history_title">历&#160;史</string>
    <string name="favourate_title">收&#160;藏</string>
    <string name="recommend_title">推&#160;荐</string>
    <string name="search_cancel">取&#160;消</string>
    <string name="search_forward">前&#160;往</string>
    <string name="delete_history">删除历史</string>
    <string name="action_setting">多选</string>
    <string name="select_item">已选择:</string>
    <string name="cmcc_edu_warning">检测到cmcc网络，是否选择免认证连接?</string>
    <string name="wifi_option_title">免费wifi</string>
    <!-- 菜单文字 -->
    <string-array name="setting_content_item">
        <item>添加收藏</item>
        <item>收藏/历史</item>
        <item>设置</item>
        <item>刷新</item>
        <item>分享</item>
        <item>开启无图关闭无图</item>
        <item>下载管理</item>
        <item>退出</item>
        <item>开启翻页关闭翻页</item>
        <item>开启无痕关闭无痕</item>
        <item>开启全屏退出全屏</item>
        <item>意见反馈</item>
        <item>夜间模式日间模式</item>
        <item>个人中心</item>
    </string-array>
    <string-array name="recommend_web_address">
        <item>http://m.baidu.com/</item>
        <item>http://sina.cn</item>
        <item>http://3g.163.com</item>
        <item>http://wap.sohu.com</item>
        <item>http://3g.qq.com</item>
        <item>http://m.weibo.cn</item>
        <item>http://m.taobao.com</item>
        <item>http://m.kaixin001.com</item>
        <item>http://mt.renren.com</item>
        <item>http://i.ifeng.com</item>
    </string-array>
    <string-array name="recommend_web_name">
        <item>百度</item>
        <item>新浪</item>
        <item>网易</item>
        <item>搜狐</item>
        <item>腾讯</item>
        <item>新浪微博</item>
        <item>手机淘宝</item>
        <item>开心网</item>
        <item>人人网</item>
        <item>凤凰网</item>
    </string-array>

    <string name="please_input_and_search">请输入网址或搜索</string>
    <string name="quit">提示</string>
    <string name="confirm_quit">您确定要退出？</string>
    <string name="edu_quit">您要立即下线？</string>
    
    <string name="bookmark">书签</string>
    <string name="history">历史记录</string>
    <string name="add_bookmark">添加收藏</string>
    <string name="add_to_bookmark">添至书签</string>
    <string name="add_to_recommend">添至推荐</string>
    <string name="add_bookmark_cancel">取消</string>
    <string name="font_size">字体大小</string>
    <string name="screen_intensity">夜间屏幕亮度调节</string>
    <string name="default_browser">默认浏览器</string>
    <string name="about_us">关于我们</string>
    <string name="clear_data">清除数据</string>
    <string name="restore_settings">恢复默认设置</string>
    
    
    <string name="Constants.SearchUrlGoogle">http://www.google.com/m?hl=en&amp;gl=us&amp;client=ms-null&amp;source=android-browser-key&amp;q=%s</string>
    <string name="Constants.SearchUrlWikipedia">http://en.wikipedia.org/w/index.php?search=%s&amp;go=Go</string>
    <string name="Commons.Yes">Yes</string>
    <string name="Commons.No">No</string>
    <string name="Main.ShareChooserTitle">Share via</string>
    <string name="Main.MenuShareLinkUrl">Share link</string>
    <string name="Main.MenuShareImageUrl">Share image</string>
    <string name="Main.MenuShareEmailUrl">Share email</string>
    <string name="Commons.Continue">Continue</string>
    <string name="Commons.Add">Add</string>
    <string name="Commons.Clear">Clear</string>
    <string name="Commons.Delete">Delete</string>
    <string name="Commons.Cancel">Cancel</string>
    <string name="Commons.PleaseWait">Please wait</string>
    <string name="Commons.SDCardErrorTitle">SD Card unavailable</string>
    <string name="Commons.SDCardErrorNoSDMsg">No SD Card found.</string>
    <string name="Commons.SDCardErrorSDUnavailable">SD Card is not available.</string>
    <string name="StartPage.Welcome">Welcome!</string>
    <string name="StartPage.Bookmarks">Most used bookmarks</string>
    <string name="StartPage.History">Recent history</string>
    <string name="StartPage.Search">Search</string>
    <string name="StartPage.SearchButton">Go</string>
    <string name="Commons.SslWarning">Security warning</string>
    <string name="Commons.SslWarningsHeader">There are problems with the security certificate for this site.</string>
    <string name="Commons.SslUntrusted">This certificate is not from a trusted authority.</string>
    <string name="Commons.SslIDMismatch">The name of the site does not match the name on the certificate.</string>
    <string name="Commons.SslExpired">This certificate has expired.</string>
    <string name="Commons.SslNotYetValid">This certificate is not valid yet.</string>
    <string name="ApplicationName">Zirco Browser</string>
    <string name="ApplicationNameUrl">Zirco - %s</string>
    <string name="ApplicationDescription">Zirco is an open-source browser for Android.</string>
    <string name="Main.ToastTabSwitchMessage">页  %s</string>
    <string name="Main.ToastTabSwitchFullMessage">页  %1$s: %2$s</string>
    <string name="delete">删除任务</string>
    <string name="new_window">新建窗口</string>
    <string name="delete_item">删除选定的收藏项？</string>
    <string name="delete_item_history">删除选定的历史项？</string>
    <string name="clear_history">清空记录</string>
    <string name="confirm_clear">是否清空</string>

    <string name="select_share">选择分享方式</string>	

    <string name="sina">新浪微博</string>	

    <string name="tengt">腾讯微博</string>
	

    <string name="more">更多</string>
	

    <string name="china_mobie_edu">中国移动CMCC-EDU</string>
	

    <string name="first_login">首次登录即赠送</string>
	

    <string name="free_online">1小时免费上网时长+9个牛宝</string>

	

    <string name="can_free_online">检测到CMCC-EDU信号，可以免费上网</string>

	

    <string name="cmcc_web">CMCC-WEB</string>	

	

    <string name="cmcc_edu2">CMCC-EDU</string>	

	

    <string name="connect_success">连接成功</string>
	

	

    <string name="logout">下线</string>
	

	

    <string name="log_time">已在线0小时0分钟</string>
	

	

    <string name="free_online_60">可用免费上网时长60分钟</string>

	

	

    <string name="acquire_more">获取更多免费时长</string></resources>