<LinearLayout 
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" 
  android:gravity="center"
  android:background="#000000"
>
  <RelativeLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
  >
    <ImageView 
      android:id="@+id/mybg"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" 
    />
    <ImageView 
      android:id="@+id/mybgtop"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" 
      android:visibility="invisible"
    />
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/mybgtop" 
      android:orientation="vertical"
      android:layout_centerHorizontal="true"
    >
      <!-- 第一行提示 -->
      <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="4dp" 
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
      >
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/acount_propmt_input"
          android:textColor="@color/white"
          android:textStyle="bold"
          android:textSize="15sp"
        />
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/username"
          android:textColor="@color/yellow"
          android:textStyle="bold"
          android:textSize="15sp"
        />
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/and"
          android:textColor="@color/white"
          android:textStyle="bold"
          android:textSize="15sp"
        />
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/password"
          android:textColor="@color/yellow"
          android:textStyle="bold"
          android:textSize="15sp"
        />
      </LinearLayout>
      <!-- 第二行提示 -->
      <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="5dp" 
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
      >
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/acount_propmt_change"
          android:textColor="@color/gray"
          android:textStyle="bold"
          android:textSize="12sp"
        />
      </LinearLayout>
      <!-- 第三行提示 -->
      <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
      >
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/propmt_see"
          android:textColor="@color/yellow"
          android:textStyle="bold"
          android:textSize="11sp"
        />
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/propmt_save"
          android:textColor="@color/gray"
          android:textStyle="bold"
          android:textSize="11sp"
        />
      </LinearLayout>
      <!-- 昵称 -->
      <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:layout_marginTop="7dp" 
      >
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/username"
          android:textColor="@color/white"
          android:textStyle="bold"
          android:textSize="14sp"
        />
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/username_pro"
          android:textColor="@color/white"
          android:textStyle="bold"
          android:textSize="11sp"
        />
      </LinearLayout>
      <EditText 
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
      />
      <!-- 密码 -->
      <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:layout_marginTop="7dp" 
      >
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/password"
          android:textColor="@color/white"
          android:textStyle="bold"
          android:textSize="14sp"
        />
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/password_pro"
          android:textColor="@color/white"
          android:textStyle="bold"
          android:textSize="11sp"
        />
      </LinearLayout>
      <EditText 
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:password="true"
      />
      <ImageView 
        android:id="@+id/btn_acount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" 
      />
      <ImageView 
        android:id="@+id/btn_gologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp" 
      />
    </LinearLayout>
  </RelativeLayout>
</LinearLayout>
