<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:padding="5dip"
         >
        <Button
            android:id="@+id/menuset_but_font"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:onClick="btn"
            android:text="@string/font_size"
            android:textSize="20sp"
            android:background="@drawable/barcode_inputbox_bg"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/toolbar_forward_normal"/>
        <Button
            android:id="@+id/menuset_but_intensity"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/menuset_but_font"
            android:background="@drawable/barcode_inputbox_bg"
            android:onClick="btn"
            android:gravity="center_vertical"
            android:text="@string/screen_intensity"
            android:textSize="20sp"
            android:drawableRight="@drawable/toolbar_forward_normal" />
            <Button
                android:id="@+id/menuset_but_browser"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:onClick="btn"
                android:layout_marginTop="15dp"
                android:background="@drawable/barcode_inputbox_bg"                
                android:layout_below="@+id/menuset_but_intensity"
                android:gravity="center_vertical"
                android:text="@string/default_browser"
                android:textSize="20sp"/>
            
            <com.jbl.browser.utils.SlipButton
                android:id="@+id/menuset_splitbutton"
                android:layout_width="100dip"
                android:layout_height="40dip"
                android:layout_alignRight="@+id/menuset_but_browser"
                android:layout_alignTop="@+id/menuset_but_browser"
                android:layout_marginTop="1.5dip" />

            <Button
                android:id="@+id/menuset_but_about"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/barcode_inputbox_bg"
                android:layout_below="@+id/menuset_but_browser" 
                android:onClick="btn"
                android:text="@string/about_us"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:drawableRight="@drawable/toolbar_forward_normal" />
            <Button
                android:id="@+id/menuset_but_clear"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/barcode_inputbox_bg"
                android:layout_below="@+id/menuset_but_about" 
                android:onClick="btn"
                android:text="@string/clear_data"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginTop="15dp"
               />
            <Button
                android:id="@+id/menuset_but_settings"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/barcode_inputbox_bg"
                android:layout_below="@+id/menuset_but_clear" 
                android:onClick="btn"
                android:text="@string/restore_settings"
                android:textSize="20sp"
                android:gravity="center"
                 />     
    </RelativeLayout>
</ScrollView>