<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.window.AboutActivity"
    android:background="#000000" >

    <RelativeLayout 
        android:id="@+id/relative1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView 
            android:id="@+id/title_image"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="15dip"
            />
        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="#ffffff"
            android:layout_marginLeft="70dip"
            android:layout_marginTop="5dip"
            android:textSize="30dp"/>
    </RelativeLayout>

    
    <RelativeLayout 
        android:id="@+id/relative2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative1">
        
        <ImageView 
            android:id="@+id/broswer_image"
            android:layout_alignParentLeft="true"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:paddingTop="20dip"
            />
        <TextView 
            android:id="@+id/broswer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dip"
            android:paddingTop="5dip"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/broswer"
            android:textSize="20dp"/>
        
        <TextView 
            android:id="@+id/broswer_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/broswer_image"
            android:layout_below="@+id/broswer_name"
            android:layout_marginLeft="15dip"
            android:textSize="15dp"
            android:textColor="#ffffff"
            android:text="@string/version"/>
        	
    </RelativeLayout>
    
    	<TextView 
    	    android:id="@+id/intruduce"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:paddingLeft="70dip"
    	    android:paddingTop="10dip"
    	    android:layout_below="@+id/relative2"
    	    android:textSize="15dp"
    	    android:textColor="#ffffff"
    	    android:text="@string/intruduce"/>
    	
    	<TextView 
    	    android:id="@+id/copyright"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:paddingLeft="70dip"
    	    android:paddingTop="10dip"
    	    android:layout_below="@+id/intruduce"
    	    android:textSize="15dp"
    	    android:textColor="#ffffff"
    	    android:text="版权:JBL V1"/>

</RelativeLayout>
