<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <!--
     <ImageView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_launcher"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="15dp"/>
    -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/context"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/china_mobie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/china_mobie_edu"
                android:textSize="25sp"
                />

            <TextView
                android:id="@+id/first_login"
                style="@style/TextStyle_firstlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="95dp"
                android:layout_marginTop="5dp"
                android:text="@string/first_login" />

            <TextView
                android:id="@+id/free_online"
                style="@style/TextStyle_firstlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="105dp"
                android:layout_marginTop="5dp"
                android:text="@string/free_online"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/can_free_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/can_free_online"
             android:textSize="16sp" />

        <TableLayout
            style="@style/tablelayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="13dip"
            android:layout_marginRight="13dip"
            android:orientation="vertical"
            android:stretchColumns="0" >

            <TableRow
                android:id="@+id/u_tr_ziliao"
                style="@style/tablerow_top"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/cmcc_edu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/cmcc_web"
                        android:textSize="22sp" />
                    <ImageView
                        android:id="@+id/wifi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="50dp" 
                        android:src="@drawable/skin_ico_checked" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp" 
                        android:layout_alignParentRight="true"
                        android:src="@drawable/skin_ico_checked"/>
                </RelativeLayout>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</FrameLayout>